--- a/app/src/main/res/layout/f_home.xml
+++ b/app/src/main/res/layout/f_home.xml
@@ -218,6 +218,7 @@
                 android:id="@+id/iv_red"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_gravity="right|bottom"
                 android:layout_marginBottom="@dimen/px200"
                 android:layout_marginRight="@dimen/px30"
