--- a/app/src/main/res/layout/f_knowledge_image.xml
+++ b/app/src/main/res/layout/f_knowledge_image.xml
@@ -6,21 +6,23 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/include_top"/>
+        <include layout="@layout/include_top" />
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
             <ImageView
                 android:id="@+id/iv_img"
-                android:scaleType="fitXY"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                android:src="@mipmap/place_holder" />
 
         </android.support.v4.widget.NestedScrollView>
 
     </LinearLayout>
-
 
 </layout>
