--- a/app/src/main/res/layout/i_knowledge.xml
+++ b/app/src/main/res/layout/i_knowledge.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:ignore="MissingConstraints"
+    android:padding="@dimen/px20"
     android:paddingTop="@dimen/px20">
 
     <com.d1540173108.hrz.weight.RoundImageView
@@ -12,14 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/px320"
         android:scaleType="centerCrop"
-        android:src="@mipmap/y48"
+        android:src="@mipmap/place_holder"
         tools:ignore="MissingConstraints" />
 
-    <View
+    <com.flyco.roundview.RoundFrameLayout
+        app:rv_cornerRadius_BL="@dimen/px15"
+        app:rv_cornerRadius_BR="@dimen/px15"
         android:id="@+id/view"
-        android:background="@color/black"
-        android:alpha="0.5"
-        android:visibility="gone"
+         android:alpha="0.5"
+        app:rv_backgroundColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="@dimen/px80" />
@@ -28,7 +30,7 @@
         android:id="@+id/tv_content"
         android:layout_width="0dp"
         android:ellipsize="end"
-        android:gravity="center"
+        android:gravity="center|left"
         android:layout_marginLeft="@dimen/px50"
         android:layout_marginRight="@dimen/px50"
         android:maxLines="1"
