--- a/app/src/main/res/layout/include_top.xml
+++ b/app/src/main/res/layout/include_top.xml
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:maxLength="8"
             android:textColor="@color/black_484848"
             android:textSize="19sp" />
 
