--- a/app/src/main/res/layout/i_label.xml
+++ b/app/src/main/res/layout/i_label.xml
@@ -16,6 +16,7 @@
 
     <android.support.v7.widget.AppCompatTextView
         android:layout_marginTop="@dimen/px20"
+        android:text="xxx"
         android:id="@+id/tv_name"
         style="@style/Tv12black">
 
