--- a/app/src/main/res/layout/f_lyric.xml
+++ b/app/src/main/res/layout/f_lyric.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
     </data>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:descendantFocusability="blocksDescendants" >
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,8 +51,12 @@
                 android:id="@+id/webView"
                 android:layout_margin="@dimen/px20"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"  />
+                android:layout_height="wrap_content"
+                tools:ignore="WebViewLayout" />
 
         </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+
 
 </layout>
